
v1.1.0
------
- Updated copyright year
- Changed to new logo
- Added in new features
- WIFI features is now a default
- Ability to read in a Features file
- Restores values on startup (PDE & Features)
- Reads in Features file at startup
- Updated Find Controller code
- Internal Memory moved from a Tab to a separate window
- ShowInterface added to end of generated PDE file
- Updated icon
- Delayed On device added

v1.2.0
------
- Fixed bug with detecting "My Documents" folder
- Folder updating, force the following folders
	- Sketchbook - Documents\Arduino
	- Libraries - Documents\Arduino\libraries
	- Arduino (for the executable) - Program Files\Reef Angel Controller
	- If any of those folders do not exist, RAGen will automatically create them
- Updated PDE tab to be Main Relay
- Added autodetection for library version (0.8.X or 0.9.X) to generate file appropriately
- Added updated extension based on library version (0.8.X used PDE & 0.9.X uses INO)
- Added Save button to Features page to easily update/save features
- Moved to new Feature List screen
- Changed default devices on ports 4 (Chiller), 5 (WM1), 6 (WM2)
- Cleaned up code and improved performance
- Use appropriate file extension based on what version of libraries (PDE vs INO)
- Added in "Show Library Version" menu entry to display what version of the libraries are installed
- Made DEV libraries the default libraries
- Changed PDE reference to Relay
- Internal memory to use RA_NokiaLCD on 0.9.x libraries
- Added "Launch" button to Internal memory window
- Removed Temperature and Logging from Main Relay page
- Increased size of port buttons on Main Relay page
- Updated strings for ORP, Salinity, RF, I/O and AI modules
- Added "Clear Password" button to wifi password window
- Changed "Show/Hide" to "Show/Hide Password" on wifi window
- Ability to Add PWMSlope default functions to code file based on library version
